--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-helmet": "^6.1.0",
+    "react-reveal": "^1.2.2",
     "react-twitter-embed": "^3.0.3"
   },
   "devDependencies": {
